--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,6 +8,52 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: Roboto Mono, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button.add {
+  border: #090 2px solid;
+  border-radius: 6px;
+  background-color: #cfc;
+  padding: 5px 10px;
+}
+
+button.add:hover {
+  background-color: #6f6;
+}
+
+button.add:active {
+  background-color: #0f0;
+}
+
+button {
+  border: #06f 2px solid;
+  border-radius: 6px;
+  background-color: #9ef;
+  padding: 5px 10px;
+}
+
+button:hover {
+  background-color: #0ef;
+}
+
+button:active {
+  background-color: #09f;
+}
+
+button.delete {
+  border: #f00 2px solid;
+  border-radius: 6px;
+  background-color: #fcc;
+  padding: 5px 10px;
+}
+
+button.delete:hover {
+  background-color: #f99;
+}
+
+button.delete:active {
+  background-color: #f00;
+  color: #fff;
 }
